--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^2.1.2",
     "gulp-useref": "3.1.5",
+    "lodash": "^4.17.11",
     "node-notifier": "^5.3.0",
     "run-sequence": "^1.2.2",
     "underscore": "^1.9.1",
